# nodejs-polars

./: .gitignore  .yarnrc.yml  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  bun.lockb  hierarchy.html  index.html  jest.config.js  jest.config.ts  jsr.json  modules.html  package-lock.json  package.json  rome.json  rust-toolchain  rust-toolchain.toml  sample.ts  tar-it.sh  tsconfig.json  tsconfig.test.json
.cargo/: config.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: create-js-release.yaml  create-test-release.yaml  docs.yaml  test-js.yaml  unpublish-release.yaml
@types/: jest.d.ts
__tests__/: arrow.test.ts  complex_types.test.ts  config.test.ts  dataframe.test.ts  datatypes.test.ts  datelike.test.ts  docs_usecases.test.ts  expr.test.ts  functions.test.ts  groupby.test.ts  io.test.ts  lazy_functions.test.ts  lazyframe.test.ts  serde.test.ts  series.test.ts  setup.ts  sql.test.ts  struct.test.ts  type.test.ts  typed_api.test.ts  whenthen.test.ts
__tests__/examples/: create_test_datetime.py  foods.json  single_foods.json
assets/: hierarchy.js  highlight.css  navigation.js  search.js
benches/: README.md
classes/: DataType.html  _internal_.Bool.html  _internal_.Categorical.html  _internal_.Date.html  _internal_.Datetime.html  _internal_.Decimal.html  _internal_.Duration.html  _internal_.FixedSizeList.html  _internal_.Float32.html  _internal_.Float64.html  _internal_.Int16.html  _internal_.Int32.html  _internal_.Int64.html  _internal_.Int8.html  _internal_.List.html  _internal_.Null.html  _internal_.Object_.html  _internal_.SQLContext.html  _internal_.String.html  _internal_.Struct.html  _internal_.Time.html  _internal_.UInt16.html  _internal_.UInt32.html  _internal_.UInt64.html  _internal_.UInt8.html  _internal_.Utf8.html  pl.Field.html
enums/: _internal_.TimeUnit.html
functions/: DataType-1.Datetime-1.html  DataType-1.Decimal-1.html  DataType-1.FixedSizeList-1.html  DataType-1.List-1.html  DataType-1.Struct-1.html  DataType-1.deserialize.html  DataType.Datetime-1.html  DataType.Datetime.html  DataType.Decimal-1.html  DataType.Decimal.html  DataType.Duration.html  DataType.FixedSizeList-1.html  DataType.FixedSizeList.html  DataType.List-1.html  DataType.List.html  DataType.Struct-1.html  DataType.Struct.html  DataType.deserialize.html  Datetime.html  DatetimeSeries.html  Decimal.html  FixedSizeList.html  List-1.html  List.html  ListSeries.html  SQLContext.html  StringSeries.html  Struct-1.html  Struct.html  StructSeries.html  _Expr.html  _Series.html  all.html  exprToLitOrExpr.html  pl.DataFrame.html  pl.Datetime-1.html  pl.Datetime.html  pl.Decimal.html  pl.Field-1.from.html  pl.Field.from.html  (+62 more)
interfaces/: ConcatOptions.html  CsvWriterOptions.html  DataFrameConstructor.html  DatetimeNamespace.html  DatetimeSeries-1.html  DatetimeSeries.html  ExprConstructor.html  GroupBy.html  JoinOptions.html  JsonScanOptions.html  LazyDataFrameConstructor.html  LazyJoinOptions.html  ListNamespace.html  ListSeries-1.html  ListSeries.html  ReadAvroOptions.html  ReadCsvOptions.html  ReadIPCOptions.html  ReadJsonOptions.html  ReadParquetOptions.html  RollingOptions.html  RollingQuantileOptions.html  RollingSkewOptions.html  RowCount.html  ScanCsvOptions.html  ScanIPCOptions.html  ScanParquetOptions.html  SinkCsvOptions.html  SinkIpcOptions.html  SinkJsonOptions.html  SinkOptions.html  SinkParquetOptions.html  StringNamespace.html  StringSeries-1.html  StringSeries.html  StructNamespace.html  StructSeries-1.html  StructSeries.html  WriteAvroOptions.html  WriteCsvOptions.html  (+53 more)
modules/: DataType-1.html  DataType.html  _internal_.html  cfg.html  dataframe.html  groupby.html  io.html  lazy_dataframe.html  lazy_expr.html  lazy_functions.html  lazy_groupby.html  lazy_whenthen.html  pl.Field-1.html  pl.Field.html  pl.html  series_datetime.html  series_list.html  series_series.html  series_string.html
npm/android-arm64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
polars/: cfg.ts  database.ts  dataframe.ts  error.ts  functions.ts  groupby.ts  html.ts  index.ts  io.ts  native-polars.js  shared_traits.ts  sql.ts  types.ts  utils.ts
src/: cfg.rs  conversion.rs  database.rs  dataframe.rs  datatypes.rs  delta.rs  file.rs  functions.rs  lib.rs  list_construction.rs  prelude.rs  series.rs  set.rs  sql.rs  utils.rs
types/: Bool-1.html  Bool.html  Categorical-1.html  Categorical.html  ChainedThen.html  ChainedWhen.html  ClosedWindow.html  CollectSyncOptions.html  CrossJoinOptions.html  DataType-1.Bool.html  DataType-1.Categorical.html  DataType-1.Date.html  DataType-1.Datetime.html  DataType-1.Decimal.html  DataType-1.FixedSizeList.html  DataType-1.Float32.html  DataType-1.Float64.html  DataType-1.Int16.html  DataType-1.Int32.html  DataType-1.Int64.html  DataType-1.Int8.html  DataType-1.List.html  DataType-1.Null.html  DataType-1.Object.html  DataType-1.String.html  DataType-1.Struct.html  DataType-1.Time.html  DataType-1.UInt16.html  DataType-1.UInt32.html  DataType-1.UInt64.html  DataType-1.UInt8.html  DataType-1.Utf8.html  DataType.Bool.html  DataType.Categorical.html  DataType.Date.html  DataType.Datetime.html  DataType.Decimal.html  DataType.Duration.html  DataType.FixedSizeList.html  DataType.Float32.html  (+164 more)
variables/: Bool.html  Categorical.html  Date.html  Datetime.html  DatetimeSeries.html  Decimal.html  Duration.html  FixedSizeList.html  Float32.html  Float64.html  Int16.html  Int32.html  Int64.html  Int8.html  List.html  ListSeries.html  Null.html  Object.html  String.html  StringSeries.html  Struct.html  StructSeries.html  Time.html  UInt16.html  UInt32.html  UInt64.html  UInt8.html  Utf8.html  pl.Bool.html  pl.Categorical.html  pl.Config.html  pl.DataFrame.html  pl.Date.html  pl.Datetime.html  pl.Decimal.html  pl.Duration.html  pl.Expr.html  pl.FixedSizeList.html  pl.Float32.html  pl.Float64.html  (+19 more)
(+31 files in other folders)
