[package]
name = "nodejs-polars"
version = "0.18.0"
authors = ["Cory Grinstead"]
documentation = "https://pola-rs.github.io/polars-book/"
edition = "2021"
exclude = ["libpolars.node"]
homepage = "https://github.com/pola-rs/nodejs-polars"
license = "MIT"
repository = "https://github.com/pola-rs/nodejs-polars"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ahash = "0.8.11"
bincode = "1.3.3"
napi = { version = "3.0.0-alpha.29", default-features = false, features = [
  "napi8",
  "serde-json",
] }
napi-derive = { version = "3.0.0-alpha.29", default-features = false }
polars-core = { version = "0.47.0", default-features = false, features = [] }
polars-io = { version = "0.47.0", default-features = false }
polars-lazy = { version = "0.47.0", default-features = false, features = [] }
polars-ops = { version = "0.47.0", default-features = false }
polars-arrow = { version = "0.47.0", default-features = false }
polars-plan = { version = "0.47.0", default-features = false }
polars-ffi = { version = "0.47.0", default-features = false }
polars-utils = { version = "0.47.0", default-features = false }
polars-compute = { version = "0.47.0", default-features = false }
thiserror = "1"
smartstring = { version = "1" }
serde_json = { version = "1" }
either = "1.13.0"
hashbrown = { version = "0.15.2", features = ["rayon", "serde"] }

[dependencies.polars]
features = [
  "binary_encoding",
  "rolling_window",
  "json",
  "dynamic_group_by",
  "zip_with",
  "simd",
  "lazy",
  "strings",
  "temporal",
  "random",
  "object",
  "fmt",
  "performant",
  "dtype-full",
  "rows",
  "round_series",
  "is_unique",
  "is_in",
  "is_first_distinct",
  "asof_join",
  "cross_join",
  "dot_product",
  "concat_str",
  "row_hash",
  "reinterpret",
  "mode",
  "extract_jsonpath",
  "cum_agg",
  "rolling_window",
  "repeat_by",
  "interpolate",
  "ewma",
  "rank",
  "propagate_nans",
  "diff",
  "pct_change",
  "moment",
  "diagonal_concat",
  "abs",
  "dot_diagram",
  "dataframe_arithmetic",
  "json",
  "string_encoding",
  "product",
  "ndarray",
  "unique_counts",
  "log",
  "serde-lazy",
  "partition_by",
  "pivot",
  "semi_anti_join",
  "parquet",
  "to_dummies",
  "ipc",
  "ipc_streaming",
  "list_eval",
  "arg_where",
  "timezones",
  "peaks",
  "string_pad",
  "cov",
  "sql",
  "binary_encoding",
  "rolling_window",
  "json",
  "dynamic_group_by",
  "zip_with",
  "simd",
  "lazy",
  "strings",
  "temporal",
  "random",
  "object",
  "fmt",
  "performant",
  "dtype-full",
  "rows",
  "round_series",
  "is_unique",
  "is_in",
  "is_first_distinct",
  "asof_join",
  "cross_join",
  "dot_product",
  "concat_str",
  "row_hash",
  "reinterpret",
  "mode",
  "extract_jsonpath",
  "cum_agg",
  "rolling_window",
  "repeat_by",
  "interpolate",
  "ewma",
  "rank",
  "propagate_nans",
  "diff",
  "pct_change",
  "moment",
  "diagonal_concat",
  "abs",
  "dot_diagram",
  "dataframe_arithmetic",
  "json",
  "string_encoding",
  "product",
  "ndarray",
  "unique_counts",
  "log",
  "serde-lazy",
  "partition_by",
  "pivot",
  "semi_anti_join",
  "parquet",
  "to_dummies",
  "ipc",
  "avro",
  "list_eval",
  "arg_where",
  "timezones",
  "peaks",
  "string_pad",
  "replace",
  "cov",
  "http",
  "cloud",
  "aws",
  "gcp",
  "azure",
]
# git = "https://github.com/pola-rs/polars.git"
# rev = "f298ace880b238fb5793eaf0cdeb6b418e2ba583"
version = "0.47.0"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
codegen-units = 1
lto = "fat"

[features]
default = ["range"]
range = ["polars-lazy/range"]
