[package]
name = "nodejs-polars"
version = "0.23.5"
authors = ["Cory Grinstead"]
documentation = "https://pola-rs.github.io/polars-book/"
edition = "2021"
exclude = ["libpolars.node"]
homepage = "https://github.com/pola-rs/nodejs-polars"
license = "MIT"
repository = "https://github.com/pola-rs/nodejs-polars"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
napi = { version = "3.8.1", default-features = false, features = [ "napi8", "serde-json" ] }
napi-derive = { version = "3.5.0", default-features = false }
polars-core = { version = "0.52.0", default-features = false }
polars-io = { version = "0.52.0", default-features = false }
polars-lazy = { version = "0.52.0", default-features = false }
polars-ops = { version = "0.52.0", default-features = false }
polars-arrow = { version = "0.52.0", default-features = false }
polars-utils = { version = "0.52.0", default-features = false }
polars-compute = { version = "0.52.0", default-features = false }
thiserror = "2"
serde_json = "1"
either = "1.15.0"

[dependencies.polars]
features = [
  "abs",
  "arg_where",
  "asof_join",
  "aws",
  "avro",
  "azure",
  "binary_encoding",
  "cloud",
  "concat_str",
  "cov",
  "cross_join",
  "cum_agg",
  "dataframe_arithmetic",
  "diagonal_concat",
  "diff",
  "dot_diagram",
  "dot_product",
  "dtype-full",
  "dynamic_group_by",
  "ewma",
  "extract_jsonpath",
  "fmt",
  "gcp",
  "http",
  "interpolate",
  "ipc",
  "ipc_streaming",
  "is_first_distinct",
  "is_in",
  "is_unique",
  "json",
  "lazy",
  "list_eval",
  "log",
  "mode",
  "moment",
  "object",
  "parquet",
  "partition_by",
  "pct_change",
  "peaks",
  "performant",
  "pivot",
  "product",
  "propagate_nans",
  "random",
  "rank",
  "reinterpret",
  "repeat_by",
  "replace",
  "rolling_window",
  "row_hash",
  "rows",
  "round_series",
  "semi_anti_join",
  "serde-lazy",
  "simd",
  "sql",
  "string_encoding",
  "string_pad",
  "strings",
  "temporal",
  "timezones",
  "to_dummies",
  "unique_counts",
  "zip_with"
]

version = "0.52.0"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
codegen-units = 1
lto = "fat"

[features]
default = ["range"]
range = ["polars-lazy/range"]
